testsuite/bad/bad058.jl
double printInt() {
   return 1;
}
int main() { 
   printInt(1.0);
}
